<resources>
    <string name="app_name">Booktopia</string>
    <string name="user_prompt">Add a new book</string>
    <string name="button_add">Add</string>
    <string name="hint_book_title">Book Title</string>
    <string name="hint_book_author">Book Author</string>
    <string name="hint_year_published">Year Published</string>
    <string name="string_your_list">Your List</string>
    <string name="string_favorites">Favorites</string>
    <string name="tv_string_book_title">Book Title</string>
    <string name="tv_string_book_author">Book Author</string>
    <string name="tv_string_year_of_release">Year Of Release</string>
    <string name="no_books_found">No Books Found</string>
    <string name="String_menu_delete">Delete</string>
    <string name="label_activity_add_book">New Book</string>
</resources>
